--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,8 +40,8 @@
         </div>
         <nav class="navigation">
             <ul class="tabs" id="tabs">
-                <li class="tab" target="_blank"><a href="static/documents/ResumeCV.pdf">Get CV/</a></li>
-                <li class="tab" target="_blank"><a href="static/documents/certification.pdf">Certification</a></li>
+                <li class="tab" target="_blank"><a href="https://github.com/mrjeanjoseph/CRUD_AllDay/blob/master/cheatsheet/docs/ResumeCV.pdf">Get CV/</a></li>
+                <li class="tab" target="_blank"><a href="https://github.com/mrjeanjoseph/CRUD_AllDay/blob/master/cheatsheet/docs/certification.pdf">Certification</a></li>
             </ul>
         </nav>
     </div>
