--- a/Portfolio/Portfolio.Main/wwwroot/index.html
+++ b/Portfolio/Portfolio.Main/wwwroot/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio.main</title>
+    <title>Frednel Jean-Joseph - Software Engineer Portfolio</title>
+    <meta name="description" content="Professional portfolio of Frednel Jean-Joseph, a .NET software engineer specializing in Angular, React, SQL Server, and Azure cloud solutions.">
+    <meta name="keywords" content="software engineer, .NET developer, Angular, React, SQL Server, Azure, full-stack developer">
+    <meta name="author" content="Frednel Jean-Joseph">
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="portfolio.main.styles.css" rel="stylesheet" />
