--- a/Portfolio/Portfolio.Main/wwwroot/index.html
+++ b/Portfolio/Portfolio.Main/wwwroot/index.html
@@ -20,11 +20,21 @@
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div class="coffee-loader" id="blazor-startup-loader">
+            <div class="coffee-overlay"></div>
+            <div class="coffee-wrap">
+                <div class="coffee-pot">
+                    <div class="coffee-liquid">
+                        <div class="coffee-level" id="coffee-level"></div>
+                    </div>
+                    <div class="coffee-spout"></div>
+                    <div class="coffee-handle"></div>
+                </div>
+                <div class="coffee-status mt-3">
+                    Brewing your app...
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
@@ -34,6 +44,28 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        // Simulate a filling coffee level until Blazor replaces the loader
+        (function () {
+            const level = document.getElementById('coffee-level');
+            if (!level) return;
+            let p = 0;
+            const timer = setInterval(() => {
+                p = Math.min(100, p + Math.random() * 12);
+                level.style.height = p + '%';
+                if (p >= 100) {
+                    clearInterval(timer);
+                }
+            }, 120);
+        })();
+        // Hide loader when Blazor boot script attaches to the app
+        document.addEventListener('readystatechange', function () {
+            if (document.readyState === 'complete') {
+                const loader = document.getElementById('blazor-startup-loader');
+                if (loader) loader.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 
 </html>
