--- a/Portfolio/Portfolio.Main/wwwroot/index.html
+++ b/Portfolio/Portfolio.Main/wwwroot/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="portrait.jpg" />
+    <link rel="icon" type="image/png" href="open-book.png" />
     <link href="portfolio.main.styles.css" rel="stylesheet" />
 </head>
 
